--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: Casino
-      MYSQL_USER: prueba
+      MYSQL_USER: root
       MYSQL_PASSWORD: 123456
     ports:
       - 3307:3306
